@@ -1,6 +1,7 @@
 Revision history for JSON-Fast
 
 {{$NEXT}}
+    - Enums jsonify as a string of their short name again.
 
 0.9.14  2019-06-27T01:51:50+02:00
     - Nonpretty output doesn't need a space between keys and values
